cot-macros/tests/ui/derive_select_choice_empty_enum.rs
use cot_macros::SelectChoice;

#[derive(SelectChoice)]
enum EmptyEnum {}

fn main() {}
